[package]
name = "aws_ecs_rust_warp_demo"
version = "0.1.0"
authors = ["Brent Lemons <lembrent@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.17.1"
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }